--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
   text-align: center;
   color: white;
 }
-
+assets/adu-yazan-preview.png
 .brand-title {
+
   font-size: 3rem;
   color: #ff00cc;
   text-shadow: 0 0 20px #ff00cc;
@@ -76,3 +77,4 @@ body {
   display: inline-block;
   margin-top: 20px;
     }
+
